crates/mabo-compiler/tests/snapshots/compiler__error_resolve@local_sub_nested.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "struct Sample {\n    value: inner::a::b::c::Other @1,\n}\n\nmod inner {\n    mod a {\n        mod b {\n            mod c {}\n        }\n    }\n}"
input_file: crates/mabo-compiler/tests/inputs/resolve/local_sub_nested.mabo
---
  × type resolution failed
  ├─▶ failed resolving type in local modules
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭test::inner::a::b::c❬Y❭
   ╭─[resolve/local_sub_nested.mabo:2:28]
 1 │ struct Sample {
 2 │     value: inner::a::b::c::Other @1,
   ·                            ──┬──
   ·                              ╰── used here
 3 │ }
 4 │ 
 5 │ mod inner {
   ╰────

