crates/mabo-compiler/tests/snapshots/compiler__error_resolve@remote_root.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "use datetime::Date;\n\nstruct Sample {\n    value: Other @1,\n}"
input_file: crates/mabo-compiler/tests/inputs/resolve/remote_root.mabo
---
  × type resolution failed
  ├─▶ failed resolving type in remote modules
  ╰─▶ missing import for type ❬Y❭Other❬Y❭
   ╭─[resolve/remote_root.mabo:4:12]
 1 │ use datetime::Date;
 2 │ 
 3 │ struct Sample {
 4 │     value: Other @1,
   ·            ──┬──
   ·              ╰── used here
 5 │ }
   ╰────

