crates/mabo-compiler/tests/snapshots/compiler__error_resolve@remote_root_mod.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "use datetime;\n\nstruct Sample {\n    value: datetime::Other @1,\n}"
input_file: crates/mabo-compiler/tests/inputs/resolve/remote_root_mod.mabo
---
  × type resolution failed
  ├─▶ failed resolving type in remote modules
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭datetime❬Y❭
   ╭─[resolve/remote_root_mod.mabo:4:22]
 1 │ use datetime;
 2 │ 
 3 │ struct Sample {
 4 │     value: datetime::Other @1,
   ·                      ──┬──
   ·                        ╰── used here
 5 │ }
   ╰────
