crates/mabo-compiler/tests/snapshots/compiler__error_resolve@remote_sub.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "use datetime::timing;\n\nstruct Sample {\n    value: timing::Other @1,\n}"
input_file: crates/mabo-compiler/tests/inputs/resolve/remote_sub.mabo
---
  × type resolution failed
  ├─▶ failed resolving type in remote modules
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭datetime::timing❬Y❭
   ╭─[remote_sub.mabo:1:1]
 1 │ use datetime::timing;
 2 │ 
 3 │ struct Sample {
 4 │     value: timing::Other @1,
   ·                    ──┬──
   ·                      ╰── used here
 5 │ }
   ╰────

